[multilag] added de support

--- a/_config.yml
+++ b/_config.yml
@@ -8,11 +8,9 @@ email: info@chainsquad.com
 # name: ChainSquad GmbH (in Gründung)
 name: ChainSquad
 
-about: 
+vision: 
  de: >
-  Wir sind ein unabhängiges Team das Ihnen bei der Entwicklung,
-  der Fortbildung und Beratung für blockketten-basierte Anwendungen
-  bietet.
+  Die Blockketten-Technologie ändert alles, nicht nur FinTech.
 
  en: >
   The blockchain technology is disrupting everything and it won't stop
