--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,14 @@
 _site
 .sass-cache
 .jekyll-metadata
+
+# Created by https://www.toptal.com/developers/gitignore/api/jekyll
+# Edit at https://www.toptal.com/developers/gitignore?templates=jekyll
+
+### Jekyll ###
+_site/
+.sass-cache/
+.jekyll-cache/
+.jekyll-metadata
+
+# End of https://www.toptal.com/developers/gitignore/api/jekyll
