--- a/_config.yml
+++ b/_config.yml
@@ -8,9 +8,9 @@ email: info@chainsquad.com
 name: ChainSquad GmbH
 vision: 
  de: >
-  Die Blockketten-Technologie ändert alles, nicht nur FinTech.
+  Die autonome Blockketten-Technologie ändert alles.
  en: >
-  The blockchain technology is disrupting everything not just fintech.
+  The autonomous blockchain technology is yet to disrupt.
 baseurl: ""
 url: "http://chainsquad.com"
 github: chainsquad
