--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -3,6 +3,9 @@ name: Build and Deploy
 on:
   workflow_call:
   workflow_dispatch:
+  push:
+    branches:
+      - master
 
 jobs:
   build-and-deploy:
@@ -34,7 +37,7 @@ jobs:
 
       - name: Deploy to external repository
         uses: peaceiris/actions-gh-pages@v3
-        if: github.ref == 'refs/heads/main'
+        if: github.ref == 'refs/heads/master'
         with:
           github_token: ${{ secrets.GITHUB_TOKEN }}
           publish_dir: ./out
